--- a/templates/items-template.html
+++ b/templates/items-template.html
@@ -1,5 +1,15 @@
 <script type="text/html" id="item-tmpl">
     <!-- BEGIN: Item Template. -->
-    <li class="item" ><a href="{{link}}">{{text}}</a></li>
+    <li class="item">
+        <a href="{{link}}">{{text}}</a>
+    </li>
+    {{#item.hasSubItems}}
+        <span class="opener">Publications et Communications</span>
+        <ul>
+            {{#item.items}}
+                <li><a href="{{link}}">{{text}}</a></li>
+            {{/item.items}}
+        </ul>
+    {{/item.hasSubItems}}
     <!-- END: Item Template. -->
 </script>
