--- a/templates/items-template.html
+++ b/templates/items-template.html
@@ -4,7 +4,7 @@
     <li class="item">
         <a href="{{link}}">{{text}}</a>
     </li>
-    {{^item.hasSubItems}}
+    {{/item.hasSubItems}}
     {{#item.hasSubItems}}
         <span class="opener">Publications et Communications</span>
         <ul>
