--- a/templates/items-template.html
+++ b/templates/items-template.html
@@ -6,12 +6,12 @@
     </li>
     {{/hasSubItems}}
     {{#hasSubItems}}
-        <span class="opener">Publications et Communications</span>
+        <li><span class="opener">Publications et Communications</span>
         <ul>
             {{#items}}
                 <li><a href="{{link}}">{{text}}</a></li>
             {{/items}}
-        </ul>
+        </ul></li>
     {{/hasSubItems}}
     <!-- END: Item Template. -->
 </script>
