--- a/templates/items-template.html
+++ b/templates/items-template.html
@@ -1,17 +1,17 @@
 <script type="text/html" id="item-tmpl">
     <!-- BEGIN: Item Template. -->
+    <li>
     {{^hasSubItems}}
-    <li class="item">
         <a href="{{link}}">{{text}}</a>
-    </li>
     {{/hasSubItems}}
     {{#hasSubItems}}
-        <li><span class="opener">Publications et Communications</span>
-        <ul>
+            <span class="opener">{{text}}</span>
+            <ul>
             {{#items}}
-                <li><a href="{{link}}">{{text}}</a></li>
+                <li><a href="{{_link}}">{{_text}}</a></li>
             {{/items}}
-        </ul></li>
+        </ul>
     {{/hasSubItems}}
+    </li>
     <!-- END: Item Template. -->
 </script>
